# FlexRaft-Code

./: .gitignore  CMakeLists.txt  Makefile  README.md
RCF/: CMakeLists.txt  LICENSE.txt  README.txt
RCF/demo/cmake/: CMakeLists.txt
RCF/demo/cmake/DemoClient/: CMakeLists.txt
RCF/demo/cmake/DemoServer/: CMakeLists.txt
RCF/demo/cmake/RcfDll/: CMakeLists.txt
RCF/demo/cmake/RcfLib/: CMakeLists.txt
RCF/demo/vs2015/DemoClient/: DemoClient.vcxproj
RCF/demo/vs2015/DemoServer/: DemoServer.vcxproj
RCF/demo/vs2015/RcfDll/: RcfDll.vcxproj
RCF/include/RCF/: AmiIoHandler.hpp  AmiThreadPool.hpp  Any.hpp  Asio.hpp  AsioBuffers.hpp  AsioDeadlineTimer.hpp  AsioFwd.hpp  AsioHandlerCache.hpp  AsioServerTransport.hpp  Base64.hpp  BsAutoPtr.hpp  BsdClientTransport.hpp  BsdSockets.hpp  BuildVersion.hpp  ByteBuffer.hpp  ByteOrdering.hpp  CallbackConnectionService.hpp  Certificate.hpp  ClientProgress.hpp  ClientStub.hpp  ClientStubLegacy.hpp  ClientTransport.hpp  Config.hpp  ConnectedClientTransport.hpp  CurrentSerializationProtocol.hpp  CurrentSession.hpp  CustomAllocator.hpp  DynamicLib.hpp  Endpoint.hpp  Enums.hpp  ErrorMsg.hpp  Exception.hpp  Export.hpp  FileDownload.hpp  FileIoThreadPool.hpp  FileStream.hpp  FileSystem.hpp  FileTransferInterface.hpp  FileTransferService.hpp  FileUpload.hpp  (+89 more)
RCF/include/RCF/Unix/: BsdSockets.hpp  OS.hpp  OutputDebugString.hpp
RCF/include/RCF/Windows/: BsdSockets.hpp  OutputDebugString.hpp
RCF/include/SF/: Archive.hpp  DataPtr.hpp  Encoding.hpp  IBinaryStream.hpp  INativeBinaryStream.hpp  ITextStream.hpp  I_Stream.hpp  Node.hpp  OBinaryStream.hpp  ONativeBinaryStream.hpp  OTextStream.hpp  PortableTypes.hpp  Registry.hpp  SerializeAny.hpp  SerializeArray.hpp  SerializeDynamicArray.hpp  SerializeFundamental.hpp  SerializeParent.hpp  SerializePolymorphic.hpp  SerializeSmartPtr.hpp  SerializeStaticArray.hpp  SerializeStl.hpp  Serializer.hpp  SfNew.hpp  Stream.hpp  array.hpp  auto_ptr.hpp  bitset.hpp  deque.hpp  list.hpp  map.hpp  memory.hpp  set.hpp  shared_ptr.hpp  string.hpp  tuple.hpp  unique_ptr.hpp  utility.hpp  vector.hpp
RCF/include/SF/boost/: any.hpp  array.hpp  intrusive_ptr.hpp  scoped_ptr.hpp  shared_ptr.hpp  tuple.hpp  variant.hpp
RCF/include/SF/qt/: QByteArray.hpp  QCore.hpp  QHash.hpp  QHostAddress.hpp  QImage.hpp  QList.hpp  QMap.hpp  QString.hpp  QStringList.hpp  QVariant.hpp
RCF/include/SF/tr1/: array.hpp  hash_map.hpp  hash_set.hpp  shared_ptr.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp
RCF/src/RCF/: AmiThreadPool.cpp  AsioHandlerCache.cpp  AsioServerTransport.cpp  Base64.cpp  BoostSystem.cpp  BsdClientTransport.cpp  ByteBuffer.cpp  ByteOrdering.cpp  CallbackConnectionService.cpp  Certificate.cpp  ClientStub.cpp  ClientStubLegacy.cpp  ClientTransport.cpp  ConnectedClientTransport.cpp  CurrentSerializationProtocol.cpp  CurrentSession.cpp  DynamicLib.cpp  Enums.cpp  ErrorMsg.cpp  Exception.cpp  FileIoThreadPool.cpp  FileStream.cpp  FileSystem.cpp  FileTransferService.cpp  Filter.cpp  FilterService.cpp  Future.cpp  Globals.cpp  HttpClientTransport.cpp  HttpConnectFilter.cpp  HttpEndpoint.cpp  HttpFrameFilter.cpp  HttpServerTransport.cpp  HttpSessionFilter.cpp  HttpsClientTransport.cpp  HttpsEndpoint.cpp  HttpsServerTransport.cpp  InitDeinit.cpp  IpAddress.cpp  IpClientTransport.cpp  (+64 more)
RCF/src/SF/: Archive.cpp  DataPtr.cpp  Encoding.cpp  I_Stream.cpp  Registry.cpp  SF.cpp  Serializer.cpp  Stream.cpp  bitset.cpp  vector.cpp
bench/: CMakeLists.txt  bench_client.cc  bench_server.cc  cloud_cluster3.cfg  cloud_cluster7.cfg  cloud_cluster9.cfg  cluster3.cfg  cluster5.cfg  cluster_11.conf  follower_recover_bench.cc  leaderpre_bench.cc  local_cluster.cfg  readbench_client.cc  util.h  ycsb_client.cc  ycsb_server.cc
exp/: README.md  clean.py  clear.py  cluster7.conf  cluster_11.conf  cluster_5.conf  cluster_7.conf  cluster_9.conf  cluster_local.conf  limit_bandwidth.py  read_bench.py  util.py  write_bench.py  ycsb_bench.py
kv/: CMakeLists.txt  channel.h  client.cc  client.h  concurrent_queue.h  config.cc  config.h  kv_format.cc  kv_format.h  kv_node.cc  kv_node.h  kv_server.cc  kv_server.h  rpc.cc  rpc.h  storage_engine.cc  storage_engine.h  type.cc  type.h
kv/test/: CMakeLists.txt  concurrent_queue_test.cc  kv_cluster_test.cc  kv_server_test.cc  storage_engine_test.cc
raft/: CMakeLists.txt  chunk.cc  chunk.h  code_conversion.cc  code_conversion.h  encoder.cc  encoder.h  iter.h  log_entry.cc  log_entry.h  log_manager.cc  log_manager.h  raft.cc  raft.h  raft_node.cc  raft_node.h  raft_struct.h  raft_type.h  rcf_rpc.cc  rcf_rpc.h  rpc.h  rsm.h  serializer.cc  serializer.h  storage.cc  storage.h  subchunk.cc  subchunk.h  util.cc  util.h
raft/test/: CMakeLists.txt  chunk_test.cc  code_conversion_test.cc  encoder_test.cc  iter_test.cc  log_manager_test.cc  raft_appendentries_test.cc  raft_node_crash_test.cc  raft_node_test.cc  raft_node_test.h  raft_requestvote_test.cc  retransfer_bench_test.cc  rpc_bench_test.cc  serializer_test.cc  storage_test.cc  subchunk_test.cc  test_util.h
scripts/: build.sh  install_dependencies.py  limit_bandwidth.py
